--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,10 +1,9 @@
 {
     "eslint.packageManager": "yarn",
-    "window.zoomLevel": 0,
+    "window.zoomLevel": 1,
     "workbench.colorTheme": "Monokai",
     "workbench.iconTheme": "vscode-icons",
     "editor.renderWhitespace": "boundary",
-    "editor.cursorStyle": "underline-thin",
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
@@ -31,4 +30,10 @@
     },
     "editor.tabSize": 2,
     "git.enableCommitSigning": true,
+    "editor.multiCursorModifier": "ctrlCmd",
+    "git.path": "/usr/bin/git",
+    "files.associations": {
+        "*.tex": "tex"
+    },
+    "breadcrumbs.enabled": true,
 }
