--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -2,22 +2,21 @@
   "workbench.iconTheme": "material-icon-theme",
     "editor.renderWhitespace": "boundary",
     "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/node_modules": true,
+      "**/.DS_Store": true,
+      "**/.git": true,
+      "**/.hg": true,
+      "**/.svn": true,
+      "**/CVS": true,
+      "**/node_modules": true
     },
     "editor.minimap.enabled": false,
     "editor.cursorBlinking": "solid",
     "workbench.fontAliasing": "antialiased",
-    "workbench.sideBar.location": "right",
+    "workbench.sideBar.location": "left",
     "workbench.editor.labelFormat": "short",
     "workbench.editor.tabSizing": "shrink",
     "window.clickThroughInactive": false,
     "prettier.eslintIntegration": true,
-    "eslint.autoFixOnSave": true,
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
     "workbench.list.horizontalScrolling": true,
@@ -41,7 +40,6 @@
     "editor.tabSize": 2,
     "editor.fontFamily": "'FiraCode-Retina'",
     "editor.fontLigatures": true,
-    "eslint.packageManager": "yarn",
     "[javascript]": {
       "editor.defaultFormatter": "vscode.typescript-language-features"
     },
@@ -62,11 +60,54 @@
     "go.gotoSymbol.includeImports": true,
     "go.formatTool": "goimports",
     "debug.console.fontSize": 18,
-    "window.zoomLevel": 1,
     "go.buildOnSave": "off",
     "workbench.editor.showTabs": true,
     "javascript.updateImportsOnFileMove.enabled": "never",
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
+    "workbench.colorTheme": "Bluloco Light",
+    "terminal.integrated.fontFamily": "monospace",
+    "editor.rulers": [
+    
+    ],
+    "cmake.configureOnOpen": true,
+    "go.toolsManagement.autoUpdate": true,
+    "mssql.connections": [
+      {
+        "server": "{{put-server-name-here}}",
+        "database": "{{put-database-name-here}}",
+        "user": "{{put-username-here}}",
+        "password": "{{put-password-here}}"
+      }
+    ],
+    "reason.codelens.unicode": false,
+    "reason.server.languages": [
+      "ocaml",
+    ],
+    "[typescript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[typescriptreact]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "eslint.probe": [
+      "javascript",
+      "javascriptreact",
+      "typescript",
+      "typescriptreact",
+      "html",
+      "markdown"
+    ],
+    "workbench.editorAssociations": {
+      "*.ipynb": "jupyter-notebook"
+    },
+    "python.showStartPage": false,
+    "workbench.startupEditor": "none",
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "notebook.cellToolbarLocation": {
+      "default": "right",
+      "jupyter-notebook": "left"
+    },
+    "[jsonc]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "security.workspace.trust.untrustedFiles": "open",
 }
