--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -27,7 +27,8 @@
     "editor.multiCursorModifier": "ctrlCmd",
     "git.path": "/usr/bin/git",
     "files.associations": {
-        "*.tex": "tex"
+      "*.tex": "tex",
+      "*.css": "tailwindcss"
     },
     "breadcrumbs.enabled": true,
     "editor.detectIndentation": false,
@@ -83,10 +84,10 @@
       "ocaml",
     ],
     "[typescript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+      "editor.defaultFormatter": "vscode.typescript-language-features"
     },
     "[typescriptreact]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+      "editor.defaultFormatter": "vscode.typescript-language-features"
     },
     "eslint.probe": [
       "javascript",
@@ -97,7 +98,8 @@
       "markdown"
     ],
     "workbench.editorAssociations": {
-      "*.ipynb": "jupyter-notebook"
+      "*.ipynb": "jupyter-notebook",
+      "*.pdf": "pdf.preview"
     },
     "python.showStartPage": false,
     "workbench.startupEditor": "none",
@@ -110,4 +112,84 @@
       "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "security.workspace.trust.untrustedFiles": "open",
+    "cSpell.userWords": [
+      "accountmanagement",
+      "adminconnect",
+      "agentdb",
+      "AIPLOMB",
+      "aiwet",
+      "autodocs",
+      "Beginx",
+      "behaviour",
+      "bleepbloopsify",
+      "bradleyfalzon",
+      "bufbuild",
+      "datetime",
+      "Debugf",
+      "depr",
+      "Displayer",
+      "donotreply",
+      "execve",
+      "fname",
+      "fxevent",
+      "ghinstallation",
+      "githubappuser",
+      "godotenv",
+      "grto",
+      "httpservice",
+      "httpservicefx",
+      "httpservicenofx",
+      "ibfk",
+      "Infof",
+      "Inno",
+      "jmoiron",
+      "joho",
+      "leonchou",
+      "MAILGUN",
+      "Medisine",
+      "oauthdb",
+      "oauthgithub",
+      "OPENAI",
+      "proto",
+      "protobuf",
+      "protoc",
+      "protoreflect",
+      "protos",
+      "protosconnect",
+      "pseudoagents",
+      "psuedoagent",
+      "reauth",
+      "sashabaranov",
+      "servicecontainer",
+      "sess",
+      "shareddb",
+      "shellwords",
+      "Signup",
+      "sqlx",
+      "ssion",
+      "structpb",
+      "summ",
+      "tailwindcss",
+      "timestamppb",
+      "tmpl",
+      "Unasserted",
+      "unmarshalling",
+      "unsetting",
+      "usehooks",
+      "Viewports",
+      "workspacemanager",
+      "workspacerunner",
+      "workspacerunneraddtask"
+    ],
+    "editor.inlineSuggest.enabled": true,
+    "workbench.editor.enablePreview": false,
+    "sqlfluff.dialect": "mysql",
+    "powermode.enabled": true,
+    "powermode.shake.enabled": false,
+    "powermode.presets": "flames",
+    "powermode.combo.location": "editor",
+    "powermode.combo.counterSize": 2,
+    "editor.fontSize": 14,
+    "extensions.ignoreRecommendations": true,
+    "window.zoomLevel": -1,
 }
